--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
+    "use-local-storage": "^3.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
