--- a/package.json
+++ b/package.json
@@ -1,17 +1,59 @@
 {
   "name": "automation",
+  "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "dev": "next dev --port 3000",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint --max-warnings 0",
+    "check-types": "next typegen && tsc --noEmit",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+  },
+  "dependencies": {
+    "@ai-sdk/google": "^1.0.9",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "ai": "^4.0.38",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.468.0",
+    "next": "^16.0.7",
+    "next-themes": "^0.4.6",
+    "playwright": "^1.49.1",
+    "react": "^19.2.0",
+    "react-day-picker": "^9.11.3",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^2.6.0",
+    "use-local-storage": "^3.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@next/eslint-plugin-next": "^15.5.0",
+    "@types/node": "^22.15.3",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.5.0",
+    "postcss": "^8.4.49",
     "prettier": "^3.6.2",
-    "turbo": "^2.6.2",
-    "typescript": "5.9.2"
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.9.2",
+    "typescript-eslint": "^8.47.0"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
