--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint --max-warnings 0",
     "check-types": "next typegen && tsc --noEmit",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "dev": "next dev --port 3000",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "eslint --max-warnings 0",
+    "start": "next start"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.0.9",
@@ -33,6 +33,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
+    "sst": "3.17.25",
     "tailwind-merge": "^2.6.0",
     "use-local-storage": "^3.0.0",
     "zod": "^3.25.76"
